# Java-Analysis

./: .gitignore  README.md  new_report.md  pyproject.toml  report-new.md  requirements.txt  setup.py
src/: __init__.py  cli.py
src/analyzers/: __init__.py  file_analyzer.py  llm_analyzer.py
src/core/: __init__.py  config.py  models.py  report_generator.py
src/utils/: file_utils.py
test_project/src/main/java/com/example/: Main.java  User.java  UserManager.java  UserService.java  UserValidator.java
test_project/src/main/java/com/example/config/: AppConfig.java
test_project/src/main/java/com/example/controller/: UserController.java
test_project/src/main/java/com/example/service/: UserService.java
tests/: test_analyzers.py
