[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "java-architecture-analyzer"
version = "0.1.0"
description = "A production-grade system for analyzing Java project architecture"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.1.7",
    "openai>=1.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "loguru>=0.7.2",
    "ratelimit>=2.2.1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "isort>=5.13.2",
]

[project.scripts]
java-analyzer = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src" 